--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <div class="container">
         <h1 class="page-title">
             <b>Aluraflix</b><br><img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
-        </h1><br>
+        </h1>    </div>
     <h2><span style="color:white">Insert your favorite <br> <img src="https://static.wikia.nocookie.net/logopedia/images/6/65/Chicago-movie-logo.png"/> <br> music to watch it here!</span></h2>
-   
-    <br><br>
-        
-        <input type="text" id="chosenMusic" size="20"/>  <button type="submit" onClick="Show()">And the show begins!</button>   
-    </div>
-    <div id="video">
+      <div id="video">
 
     </div>
-    <script src="aluraflix_IDa4.js"></script>
+    <br><br>
+        
+        <input type="text" id="cMusic" size="20"/>  
+        <button type="submit" onClick="Show()">And the show begins!</button>   
+
+
+    <script src="./aluraflix_IDa4.js"></script>
       <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
       </a>
